[package]
name = "breakcore-os"
version = "0.1.0"
authors = ["benpigchu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
object = { version = "0.23.0", default-features = false, features = ["read_core", "elf"]}
addr2line = { version = "0.14.1", default-features = false, features = ["rustc-demangle"]}
derive_more = "0.99.11"
spin = "0.7.1"
bitflags = "1.2.1"